--- a/.github/workflows/beta-v4-container-build-push.yml
+++ b/.github/workflows/beta-v4-container-build-push.yml
@@ -13,8 +13,6 @@ jobs:
     permissions:
       packages: write
       contents: read
-    env:
-      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     steps:
         
       - name: Get latest version number
@@ -71,8 +69,10 @@ jobs:
           tags: ${{ steps.extract_metadata.outputs.tags }}
           labels: ${{ steps.extract_metadata.outputs.labels }}
 
-      - uses: sarisia/actions-status-discord@v1
+      - name: Notify outcome
+        id: notify
         if: always()
+        uses: sarisia/actions-status-discord@v1
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           noprefix: true
