--- a/.github/workflows/v4-container-build-push.yml
+++ b/.github/workflows/v4-container-build-push.yml
@@ -72,11 +72,12 @@ jobs:
           tags: ${{ steps.extract_metadata.outputs.tags }}
           labels: ${{ steps.extract_metadata.outputs.labels }}
 
-      - name: Notify outcome to Slack
-        id: notify_result
-        uses: act10ns/slack@v2
-        with:
-          status: ${{ job.status }}
-          steps: ${{ toJson(steps) }}
-          message: CumulusMX v4 build and publish containers was a ${{ job.status }}
+      - name: Notify outcome
+        id: notify
         if: always()
+        uses: sarisia/actions-status-discord@v1
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          noprefix: true
+          status: ${{ job.status }}
+          title: ${{ github.workflow}} ${{ job.status }}
