--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get current version number
         run: |
@@ -43,7 +43,7 @@ jobs:
               # Trigger the build-and-push workflow
               curl -X POST \
               -H "Accept: application/vnd.github.v3+json" \
-              -H "Authorization: token ${{ secrets.PAT }}" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               https://api.github.com/repos/hucknz/cumulusmx/actions/workflows/v4-container-build-push.yml/dispatches \
               -d '{"ref":"main"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
