--- a/.github/workflows/v3-base-image-check.yml
+++ b/.github/workflows/v3-base-image-check.yml
@@ -43,7 +43,7 @@ jobs:
               # Trigger the build-and-push workflow
               curl -X POST \
               -H "Accept: application/vnd.github.v3+json" \
-              -H "Authorization: token ${{ secrets.PAT }}" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               https://api.github.com/repos/hucknz/cumulusmx/actions/workflows/v3-container-build-push.yml/dispatches \
               -d '{"ref":"main"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
