--- a/v4-beta/MXWeather.conf
+++ b/v4-beta/MXWeather.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     root /opt/CumulusMX/publicweb;
-    index index.htm
+    index index.htm;
 
     # log files
     access_log /var/log/nginx/MXWeather.access.log;
@@ -23,6 +23,29 @@ server {
         allow all;
         log_not_found off;
         access_log off;
+    }
+
+    # Proxy WebSocket connections to Cumulus MX
+    location /ws {
+        proxy_pass http://127.0.0.1:8998;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 86400;
+    }
+
+    # Proxy admin interface requests to Cumulus MX
+    location /api/ {
+        proxy_pass http://127.0.0.1:8998;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|txt)$ {
