--- a/v4-beta/MXWeather.conf
+++ b/v4-beta/MXWeather.conf
@@ -25,7 +25,15 @@ server {
         access_log off;
     }
 
-    # Proxy WebSocket connections to Cumulus MX
+    # Static files - serve directly from nginx
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|txt)$ {
+        expires max;
+        log_not_found off;
+        # Try to serve from publicweb first, then from Cumulus MX
+        try_files $uri @cumulusmx;
+    }
+
+    # WebSocket proxy - this handles /ws connections
     location /ws {
         proxy_pass http://127.0.0.1:8998;
         proxy_http_version 1.1;
@@ -39,8 +47,19 @@ server {
         proxy_read_timeout 86400;
     }
 
-    # Proxy admin interface requests to Cumulus MX
-    location /api/ {
+    # Admin interface and API calls
+    location ~ ^/(api|admin|interface)/ {
+        proxy_pass http://127.0.0.1:8998;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+    }
+
+    # Dashboard and other dynamic pages
+    location ~ \.(php|asp|aspx|jsp)$ {
         proxy_pass http://127.0.0.1:8998;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -48,8 +67,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|txt)$ {
-        expires max;
-        log_not_found off;
+    # Fallback for any other requests that might need to go to Cumulus MX
+    location @cumulusmx {
+        proxy_pass http://127.0.0.1:8998;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Default location - try static files first, then proxy
+    location / {
+        try_files $uri $uri/ @cumulusmx;
     }
 }
