Add fixes for WSS

--- a/v4-beta/MXWeather.conf
+++ b/v4-beta/MXWeather.conf
@@ -4,6 +4,10 @@ server {
     root /opt/CumulusMX/publicweb;
     index index.htm;
 
+    # Enable sub_filter for script injection
+    sub_filter_once on;
+    sub_filter_types text/html;
+
     # log files
     access_log /var/log/nginx/MXWeather.access.log;
     error_log /var/log/nginx/MXWeather.error.log;
@@ -23,6 +27,17 @@ server {
         allow all;
         log_not_found off;
         access_log off;
+    }
+
+    # WebSocket override script
+    location = /js/websocket-override.js {
+        add_header Content-Type application/javascript;
+        return 200 '(function(){const OriginalWebSocket=window.WebSocket;window.WebSocket=function(url,protocols){if(url.startsWith("ws://")&&location.protocol==="https:"){url=url.replace("ws://","wss://").replace(":8998/ws","/ws").replace(/wss:\/\/[^\/]+/,"wss://"+location.host);}console.log("WebSocket connecting to:",url);return new OriginalWebSocket(url,protocols);};for(let prop in OriginalWebSocket){if(OriginalWebSocket.hasOwnProperty(prop)){window.WebSocket[prop]=OriginalWebSocket[prop];}}window.WebSocket.prototype=OriginalWebSocket.prototype;console.log("WebSocket override loaded");})();';
+    }
+
+    # HTML files - inject the WebSocket override script
+    location ~* \.htm(l)?$ {
+        try_files $uri @inject_script;
     }
 
     # Static files - serve directly from nginx
@@ -65,6 +80,25 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Inject WebSocket override script into HTML files
+    location @inject_script {
+        proxy_pass http://127.0.0.1:8998;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Use sub_filter to inject our WebSocket override
+        sub_filter_once on;
+        sub_filter_types text/html;
+        sub_filter '</head>' '<script src="/js/websocket-override.js"></script></head>';
+        
+        # Disable caching for HTML files to ensure script injection works
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
     # Fallback for any other requests that might need to go to Cumulus MX
