Add WebSocket override

--- a/v4-beta/MXWeather.conf
+++ b/v4-beta/MXWeather.conf
@@ -4,9 +4,7 @@ server {
     root /opt/CumulusMX/publicweb;
     index index.htm;
 
-    # Enable sub_filter for script injection
-    sub_filter_once on;
-    sub_filter_types text/html;
+    # These sub_filter directives will be set per location
 
     # log files
     access_log /var/log/nginx/MXWeather.access.log;
@@ -35,9 +33,9 @@ server {
         return 200 '(function(){const OriginalWebSocket=window.WebSocket;window.WebSocket=function(url,protocols){if(url.startsWith("ws://")&&location.protocol==="https:"){url=url.replace("ws://","wss://").replace(":8998/ws","/ws").replace(/wss:\/\/[^\/]+/,"wss://"+location.host);}console.log("WebSocket connecting to:",url);return new OriginalWebSocket(url,protocols);};for(let prop in OriginalWebSocket){if(OriginalWebSocket.hasOwnProperty(prop)){window.WebSocket[prop]=OriginalWebSocket[prop];}}window.WebSocket.prototype=OriginalWebSocket.prototype;console.log("WebSocket override loaded");})();';
     }
 
-    # HTML files - inject the WebSocket override script
+    # HTML files - serve normally (script injection handled by startup script)
     location ~* \.htm(l)?$ {
-        try_files $uri @inject_script;
+        try_files $uri @cumulusmx;
     }
 
     # Static files - serve directly from nginx
