--- a/v4-beta/MXWeather.conf
+++ b/v4-beta/MXWeather.conf
@@ -2,9 +2,7 @@ server {
     listen 80;
 
     root /opt/CumulusMX/publicweb;
-    index index.htm;
-
-    # These sub_filter directives will be set per location
+    index index.htm
 
     # log files
     access_log /var/log/nginx/MXWeather.access.log;
@@ -27,89 +25,30 @@ server {
         access_log off;
     }
 
-    # WebSocket override script
-    location = /js/websocket-override.js {
-        add_header Content-Type application/javascript;
-        return 200 '(function(){const OriginalWebSocket=window.WebSocket;window.WebSocket=function(url,protocols){if(url.startsWith("ws://")&&location.protocol==="https:"){url=url.replace("ws://","wss://").replace(":8998/ws","/ws").replace(/wss:\/\/[^\/]+/,"wss://"+location.host);}console.log("WebSocket connecting to:",url);return new OriginalWebSocket(url,protocols);};for(let prop in OriginalWebSocket){if(OriginalWebSocket.hasOwnProperty(prop)){window.WebSocket[prop]=OriginalWebSocket[prop];}}window.WebSocket.prototype=OriginalWebSocket.prototype;console.log("WebSocket override loaded");})();';
-    }
-
-    # HTML files - serve normally (script injection handled by startup script)
-    location ~* \.htm(l)?$ {
-        try_files $uri @cumulusmx;
-    }
-
-    # Static files - serve directly from nginx
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|txt)$ {
         expires max;
         log_not_found off;
-        # Try to serve from publicweb first, then from Cumulus MX
-        try_files $uri @cumulusmx;
     }
+}
 
-    # WebSocket proxy - this handles /ws connections
-    location /ws {
+# Admin interface proxy
+server {
+    listen 8998;
+    
+    access_log /var/log/nginx/MXWeather-admin.access.log;
+    error_log /var/log/nginx/MXWeather-admin.error.log;
+    
+    location / {
         proxy_pass http://127.0.0.1:8998;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 86400;
-    }
-
-    # Admin interface and API calls
-    location ~ ^/(api|admin|interface)/ {
-        proxy_pass http://127.0.0.1:8998;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-    }
-
-    # Dashboard and other dynamic pages
-    location ~ \.(php|asp|aspx|jsp)$ {
-        proxy_pass http://127.0.0.1:8998;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Inject WebSocket override script into HTML files
-    location @inject_script {
-        proxy_pass http://127.0.0.1:8998;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Use sub_filter to inject our WebSocket override
-        sub_filter_once on;
-        sub_filter_types text/html;
-        sub_filter '</head>' '<script src="/js/websocket-override.js"></script></head>';
-        
-        # Disable caching for HTML files to ensure script injection works
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    # Fallback for any other requests that might need to go to Cumulus MX
-    location @cumulusmx {
-        proxy_pass http://127.0.0.1:8998;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Default location - try static files first, then proxy
-    location / {
-        try_files $uri $uri/ @cumulusmx;
     }
 }
