--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -17,30 +17,27 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get current version number
-        run: |
-          CURRENT_VERSION=$(cat upstream-releases/cumulusmx-latest.txt)
-          echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
   
-      - name: Get latest version number
+      - name: Get current version number
+        id: get_current_version
         run: |
           RELEASE_DATA=$(curl -sL "https://api.github.com/repos/cumulusmx/CumulusMX/releases/latest" 2>/dev/null)
-          NEW_VERSION=$(echo "$RELEASE_DATA" | jq -r '.tag_name')
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          CURRENT_VERSION=$(echo "$RELEASE_DATA" | jq -r '.tag_name')
+          echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
 
-      - name: Compare version numbers
+      - name: Compare versions
+        id: compare_versions
         run: |
-            if [ -z "${{ env.NEW_VERSION }}" ] || [ "${{ env.NEW_VERSION }}" = "null" ]; then
-              echo "No valid new version found. Skipping update."
-              echo "MODIFIED=false" >> $GITHUB_ENV
-            elif [ -n "${{ env.CURRENT_VERSION }}" ] && [ "${{ env.CURRENT_VERSION }}" = "${{ env.NEW_VERSION }}" ]; then
-              echo "Releases match. No change detected."
+          PREVIOUS_VERSION=$(grep "cumulusmx_version" .version | cut -d'=' -f2)
+          echo "PREVIOUS_VERSION=$PREVIOUS_VERSION" >> $GITHUB_ENV
+          
+          if [ -n "${{ env.PREVIOUS_VERSION }}" ]; then
+            if [ "${{ env.PREVIOUS_VERSION }}" = "${{ env.CURRENT_VERSION }}" ]; then
+              echo "Versions match. No change detected."
               echo "MODIFIED=false" >> $GITHUB_ENV
             else
-              echo "Releases differ. There has been a new release."
-              echo "${{ env.NEW_VERSION }}" > upstream-releases/cumulusmx-latest.txt
-              # Trigger the build-and-push workflow
+              echo "Versions differ. There has been a new release."
+              sed -i "s/^cumulusmx_version=.*/cumulusmx_version=${{ env.CURRENT_VERSION }}/" .version
               curl -X POST \
               -H "Accept: application/vnd.github.v3+json" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
@@ -48,8 +45,13 @@ jobs:
               -d '{"ref":"main"}'
               echo "MODIFIED=true" >> $GITHUB_ENV
             fi
+          else
+            echo "Previous version not found. This is likely the first run."
+            sed -i "s/^cumulusmx_version=.*/cumulusmx_version=${{ env.CURRENT_VERSION }}/" .version
+            echo "MODIFIED=true" >> $GITHUB_ENV
+          fi
 
-      - name: Commit latest hash
+      - name: Commit latest version
         if: env.MODIFIED == 'true'
         run: |
           git config --global user.name 'hucknz'
@@ -58,7 +60,7 @@ jobs:
           git push
   
       - name: Notify new version found
-        id: notify_new_version
+        id: notify_CURRENT_VERSION
         if: env.MODIFIED == 'true'
         uses: sarisia/actions-status-discord@v1
         with:
