--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -24,23 +24,19 @@ jobs:
           CURRENT_HASH=$(docker save mcr.microsoft.com/dotnet/runtime:8.0 | tar -xO | shasum -a 256 | cut -d' ' -f1)
           echo "CURRENT_HASH=$CURRENT_HASH" >> $GITHUB_ENV
 
-      - name: Get previous hash
-        id: get_previous_hash
-        run: |
-          PREVIOUS_HASH=$(cat upstream-releases/dotnet_hash.txt)
-          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
-
       - name: Compare hashes
         id: compare_hashes
         run: |
+          PREVIOUS_HASH=$(grep "dotnet_digest" .version | cut -d'=' -f2)
+          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
+          
           if [ -n "${{ env.PREVIOUS_HASH }}" ]; then
             if [ "${{ env.PREVIOUS_HASH }}" = "${{ env.CURRENT_HASH }}" ]; then
               echo "Hashes match. No change detected."
               echo "MODIFIED=false" >> $GITHUB_ENV
             else
               echo "Hashes differ. There's a change in the image."
-              echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
-              # Trigger the build-and-push workflow
+              sed -i "s/^dotnet_digest=.*/dotnet_digest=${{ env.CURRENT_HASH }}/" .version
               curl -X POST \
               -H "Accept: application/vnd.github.v3+json" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
@@ -50,7 +46,8 @@ jobs:
             fi
           else
             echo "Previous hash not found. This is likely the first run."
-            echo "${{ env.CURRENT_HASH }}" > upstream-releases/dotnet_hash.txt
+            sed -i "s/^dotnet_digest=.*/dotnet_digest=${{ env.CURRENT_HASH }}/" .version
+            echo "MODIFIED=true" >> $GITHUB_ENV
           fi
 
       - name: Commit latest hash
