--- a/.github/workflows/release-check.yml
+++ b/.github/workflows/release-check.yml
@@ -25,12 +25,15 @@ jobs:
           CURRENT_VERSION=$(echo "$RELEASE_DATA" | jq -r '.tag_name')
           echo "CURRENT_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
 
-      - name: Compare versions
-        id: compare_versions
+      - name: Get previous version number
+        id: get_previous_version
         run: |
           PREVIOUS_VERSION=$(grep "cumulusmx_version" .version | cut -d'=' -f2)
           echo "PREVIOUS_VERSION=$PREVIOUS_VERSION" >> $GITHUB_ENV
-          
+
+      - name: Compare versions
+        id: compare_versions
+        run: |
           if [ -n "${{ env.PREVIOUS_VERSION }}" ]; then
             if [ "${{ env.PREVIOUS_VERSION }}" = "${{ env.CURRENT_VERSION }}" ]; then
               echo "Versions match. No change detected."
