--- a/.github/workflows/v3-base-image-check.yml
+++ b/.github/workflows/v3-base-image-check.yml
@@ -24,6 +24,12 @@ jobs:
           CURRENT_HASH=$(docker save ubuntu:24.04 | tar -xO | shasum -a 256 | cut -d' ' -f1)
           echo "CURRENT_HASH=$CURRENT_HASH" >> $GITHUB_ENV
 
+      - name: Get previous hash
+        id: get_previous_hash
+        run: |
+          PREVIOUS_HASH=$(grep "ubuntu_digest" .version | cut -d'=' -f2)
+          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
+
       - name: Compare hashes
         id: compare_hashes
         run: |
