--- a/.github/workflows/v4-base-image-check.yml
+++ b/.github/workflows/v4-base-image-check.yml
@@ -24,12 +24,15 @@ jobs:
           CURRENT_HASH=$(docker save mcr.microsoft.com/dotnet/runtime:8.0 | tar -xO | shasum -a 256 | cut -d' ' -f1)
           echo "CURRENT_HASH=$CURRENT_HASH" >> $GITHUB_ENV
 
-      - name: Compare hashes
-        id: compare_hashes
+      - name: Get previous hash
+        id: get_previous_hash
         run: |
           PREVIOUS_HASH=$(grep "dotnet_digest" .version | cut -d'=' -f2)
           echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
-          
+
+      - name: Compare hashes
+        id: compare_hashes
+        run: |
           if [ -n "${{ env.PREVIOUS_HASH }}" ]; then
             if [ "${{ env.PREVIOUS_HASH }}" = "${{ env.CURRENT_HASH }}" ]; then
               echo "Hashes match. No change detected."
