--- a/.github/workflows/v3-base-image-check.yml
+++ b/.github/workflows/v3-base-image-check.yml
@@ -33,16 +33,13 @@ jobs:
       - name: Compare hashes
         id: compare_hashes
         run: |
-          PREVIOUS_HASH=$(grep "dotnet_digest" .version | cut -d'=' -f2)
-          echo "PREVIOUS_HASH=$PREVIOUS_HASH" >> $GITHUB_ENV
-          
           if [ -n "${{ env.PREVIOUS_HASH }}" ]; then
             if [ "${{ env.PREVIOUS_HASH }}" = "${{ env.CURRENT_HASH }}" ]; then
               echo "Hashes match. No change detected."
               echo "MODIFIED=false" >> $GITHUB_ENV
             else
               echo "Hashes differ. There's a change in the image."
-              sed -i "s/^dotnet_digest=.*/dotnet_digest=${{ env.CURRENT_HASH }}/" .version
+              sed -i "s/^ubuntu_digest=.*/ubuntu_digest=${{ env.CURRENT_HASH }}/" .version
               curl -X POST \
               -H "Accept: application/vnd.github.v3+json" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
@@ -52,7 +49,7 @@ jobs:
             fi
           else
             echo "Previous hash not found. This is likely the first run."
-            sed -i "s/^dotnet_digest=.*/dotnet_digest=${{ env.CURRENT_HASH }}/" .version
+            sed -i "s/^ubuntu_digest=.*/ubuntu_digest=${{ env.CURRENT_HASH }}/" .version
             echo "MODIFIED=true" >> $GITHUB_ENV
           fi
 
