Update Docker image tag to b4135

--- a/.github/workflows/beta-v4-container-build-push.yml
+++ b/.github/workflows/beta-v4-container-build-push.yml
@@ -56,7 +56,7 @@ jobs:
             hucknz/cumulusmx
             ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,value=beta-${{ env.VERSION }}
+            type=raw,value=beta-b4135
             type=raw,value=v4-beta
 
       - name: Build and push Docker images
