--- a/.github/workflows/beta-v4-container-build-push.yml
+++ b/.github/workflows/beta-v4-container-build-push.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Get latest version number
         id: get_version
         run: |
-          VER="b4134"
+          VER="b4135"
           echo "VERSION=$VER" >> $GITHUB_ENV
         
       - name: Set up QEMU
@@ -56,7 +56,7 @@ jobs:
             hucknz/cumulusmx
             ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,value=beta-b4135
+            type=raw,value=beta-${{ env.VERSION }}
             type=raw,value=v4-beta
 
       - name: Build and push Docker images
